--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/foto1.jpg" alt="Profile picture"></td>
+      <td><img src="foto1.jpg" alt="Profile picture"></td>
       <td>
         <h1>Martynenko Tanya</h1>
         <p><em>Junior Java Developer</em></p>
